--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\String.h" />
+    <ClInclude Include="src\render\BackgroundSphere.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
     <ClInclude Include="src\win\resource.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
@@ -117,6 +118,7 @@
     <ClCompile Include="src\model\RectBorder.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
+    <ClCompile Include="src\render\BackgroundSphere.cpp" />
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
     <ClCompile Include="src\render\release\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\release\ReleaseRenderLogic.cpp" />
