--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -72,6 +72,7 @@
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="external\soil\SOIL.h" />
+    <ClInclude Include="src\render\BackgroundSphere.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -132,6 +133,7 @@
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\render\RenderLogic.cpp" />
+    <ClCompile Include="src\render\BackgroundSphere.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
