--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="external\gl\freeglut_ucall.h" />
     <ClInclude Include="external\gl\glut.h" />
     <ClInclude Include="external\soil\SOIL.h" />
+    <ClInclude Include="src\anx\RandomSpherePoints.h" />
     <ClInclude Include="src\gl\ImageFile.h" />
     <ClInclude Include="src\gl\Texture.h" />
     <ClInclude Include="src\gl\Textures.h" />
@@ -33,6 +34,7 @@
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\render\BackgroundSphere.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
+    <ClInclude Include="src\render\release\StarsRenderer.h" />
     <ClInclude Include="src\win\resource.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\calc\Plane.h" />
@@ -92,6 +94,7 @@
     <ClInclude Include="src\win\App.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\anx\RandomSpherePoints.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\calc\LineIntersector.cpp" />
     <ClCompile Include="src\calc\Plane.cpp" />
@@ -123,6 +126,7 @@
     <ClCompile Include="src\render\release\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\release\ReleaseRenderLogic.cpp" />
     <ClCompile Include="src\render\release\ShipRenderer.cpp" />
+    <ClCompile Include="src\render\release\StarsRenderer.cpp" />
     <ClCompile Include="src\render\release\TrackRenderer.cpp" />
     <ClCompile Include="src\render\RenderLogic.cpp" />
     <ClCompile Include="src\render\ShipMesh.cpp" />
