--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -75,6 +75,7 @@
     <ClInclude Include="src\render\BackgroundSphere.h" />
     <ClInclude Include="src\anx\RandomSpherePoints.h" />
     <ClInclude Include="src\render\release\StarsRenderer.h" />
+    <ClInclude Include="src\core\TrackManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -138,6 +139,7 @@
     <ClCompile Include="src\render\BackgroundSphere.cpp" />
     <ClCompile Include="src\anx\RandomSpherePoints.cpp" />
     <ClCompile Include="src\render\release\StarsRenderer.cpp" />
+    <ClCompile Include="src\core\TrackManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
