--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="src\gl\Textures.h" />
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
+    <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\render\BackgroundSphere.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
@@ -115,6 +116,7 @@
     <ClCompile Include="src\gl\Textures.cpp" />
     <ClCompile Include="src\lib\Environment.cpp" />
     <ClCompile Include="src\lib\File.cpp" />
+    <ClCompile Include="src\lib\Path.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
