--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\Path.h" />
+    <ClInclude Include="src\lib\Point2.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\render\BackgroundSphere.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
@@ -111,6 +112,7 @@
     <ClCompile Include="src\lib\Environment.cpp" />
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\Path.cpp" />
+    <ClCompile Include="src\lib\Point2.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
