--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="src\gl\ImageFile.h" />
     <ClInclude Include="src\gl\Texture.h" />
     <ClInclude Include="src\gl\Textures.h" />
+    <ClInclude Include="src\lib\Assert.h" />
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\Path.h" />
@@ -109,6 +110,7 @@
     <ClCompile Include="src\gl\ImageFile.cpp" />
     <ClCompile Include="src\gl\Texture.cpp" />
     <ClCompile Include="src\gl\Textures.cpp" />
+    <ClCompile Include="src\lib\Assert.cpp" />
     <ClCompile Include="src\lib\Environment.cpp" />
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\Path.cpp" />
