--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="src\anx\RandomSpherePoints.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\gl\ImageFile.h" />
+    <ClInclude Include="src\gl\Mesh.h" />
     <ClInclude Include="src\gl\Texture.h" />
     <ClInclude Include="src\core\Resources.h" />
     <ClInclude Include="src\lib\Assert.h" />
@@ -108,6 +109,7 @@
     <ClCompile Include="src\core\TrackCollisionResult.cpp" />
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\gl\ImageFile.cpp" />
+    <ClCompile Include="src\gl\Mesh.cpp" />
     <ClCompile Include="src\gl\Texture.cpp" />
     <ClCompile Include="src\core\Resources.cpp" />
     <ClCompile Include="src\lib\Assert.cpp" />
