render classes rename

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -37,9 +37,9 @@
     <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\Point2.h" />
     <ClInclude Include="src\lib\String.h" />
-    <ClInclude Include="src\render\BackgroundSphere.h" />
+    <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
-    <ClInclude Include="src\render\release\StarsRenderer.h" />
+    <ClInclude Include="src\render\common\StarsRenderer.h" />
     <ClInclude Include="src\ui\GameScreen.h" />
     <ClInclude Include="src\ui\IScreenNavigator.h" />
     <ClInclude Include="src\ui\PauseMenuScreen.h" />
@@ -92,12 +92,12 @@
     <ClInclude Include="src\calc\Vector3.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\model\track\WheelTrack.h" />
-    <ClInclude Include="src\render\release\BackgroundRenderer.h" />
-    <ClInclude Include="src\render\release\ReleaseRenderLogic.h" />
-    <ClInclude Include="src\render\release\ShipRenderer.h" />
-    <ClInclude Include="src\render\release\TrackRenderer.h" />
-    <ClInclude Include="src\render\RenderLogic.h" />
-    <ClInclude Include="src\render\ShipMesh.h" />
+    <ClInclude Include="src\render\common\BackgroundRenderer.h" />
+    <ClInclude Include="src\render\ui\GameScreenRenderer.h" />
+    <ClInclude Include="src\render\common\ShipRenderer.h" />
+    <ClInclude Include="src\render\common\TrackRenderer.h" />
+    <ClInclude Include="src\render\ui\ScreenRenderer.h" />
+    <ClInclude Include="src\render\common\ShipMesh.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\render\debug\DebugShipRenderer.h" />
     <ClInclude Include="src\render\debug\DebugTrackRenderer.h" />
@@ -141,15 +141,15 @@
     <ClCompile Include="src\model\Border.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
-    <ClCompile Include="src\render\BackgroundSphere.cpp" />
+    <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
-    <ClCompile Include="src\render\release\BackgroundRenderer.cpp" />
-    <ClCompile Include="src\render\release\ReleaseRenderLogic.cpp" />
-    <ClCompile Include="src\render\release\ShipRenderer.cpp" />
-    <ClCompile Include="src\render\release\StarsRenderer.cpp" />
-    <ClCompile Include="src\render\release\TrackRenderer.cpp" />
-    <ClCompile Include="src\render\RenderLogic.cpp" />
-    <ClCompile Include="src\render\ShipMesh.cpp" />
+    <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
+    <ClCompile Include="src\render\ui\GameScreenRenderer.cpp" />
+    <ClCompile Include="src\render\common\ShipRenderer.cpp" />
+    <ClCompile Include="src\render\common\StarsRenderer.cpp" />
+    <ClCompile Include="src\render\common\TrackRenderer.cpp" />
+    <ClCompile Include="src\render\ui\ScreenRenderer.cpp" />
+    <ClCompile Include="src\render\common\ShipMesh.cpp" />
     <ClCompile Include="src\render\debug\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugTrackRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugRenderLogic.cpp" />
