--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -37,7 +37,7 @@
     <ClInclude Include="src\calc\LineIntersector.h" />
     <ClInclude Include="src\core\CollisionProcessor.h" />
     <ClInclude Include="src\core\TrackCollisionDetector.h" />
-    <ClInclude Include="src\render\ShipMesh.h" />
+    <ClInclude Include="src\render\common\ShipMesh.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\model\track\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
@@ -50,12 +50,12 @@
     <ClInclude Include="src\core\PositionUpdater.h" />
     <ClInclude Include="src\core\LapCounter.h" />
     <ClInclude Include="src\model\track\WheelTrack.h" />
-    <ClInclude Include="src\render\RenderLogic.h" />
-    <ClInclude Include="src\render\release\ReleaseRenderLogic.h" />
-    <ClInclude Include="src\render\release\ShipRenderer.h" />
-    <ClInclude Include="src\render\release\TrackRenderer.h" />
+    <ClInclude Include="src\render\ui\ScreenRenderer.h" />
+    <ClInclude Include="src\render\ui\GameScreenRenderer.h" />
+    <ClInclude Include="src\render\common\ShipRenderer.h" />
+    <ClInclude Include="src\render\common\TrackRenderer.h" />
     <ClInclude Include="src\calc\Sphere.h" />
-    <ClInclude Include="src\render\release\BackgroundRenderer.h" />
+    <ClInclude Include="src\render\common\BackgroundRenderer.h" />
     <ClInclude Include="src\win\resource.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
     <ClInclude Include="src\gl\ImageFile.h" />
@@ -63,9 +63,9 @@
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\String.h" />
-    <ClInclude Include="src\render\BackgroundSphere.h" />
+    <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\anx\RandomSpherePoints.h" />
-    <ClInclude Include="src\render\release\StarsRenderer.h" />
+    <ClInclude Include="src\render\common\StarsRenderer.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\Point2.h" />
@@ -78,6 +78,14 @@
     <ClInclude Include="src\input\Joystick.h" />
     <ClInclude Include="src\input\Keyboard.h" />
     <ClInclude Include="src\input\InputDevices.h" />
+    <ClInclude Include="src\core\IPauseSwitcher.h" />
+    <ClInclude Include="src\ui\GameScreen.h" />
+    <ClInclude Include="src\ui\IScreenNavigator.h" />
+    <ClInclude Include="src\ui\PauseMenuScreen.h" />
+    <ClInclude Include="src\ui\Screen.h" />
+    <ClInclude Include="src\ui\ScreenManager.h" />
+    <ClInclude Include="src\ui\StartMenuScreen.h" />
+    <ClInclude Include="src\ui\TrackSelectorScreen.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -111,7 +119,7 @@
     <ClCompile Include="src\calc\LineIntersector.cpp" />
     <ClCompile Include="src\core\CollisionProcessor.cpp" />
     <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
-    <ClCompile Include="src\render\ShipMesh.cpp" />
+    <ClCompile Include="src\render\common\ShipMesh.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
@@ -124,21 +132,21 @@
     <ClCompile Include="src\core\PositionUpdater.cpp" />
     <ClCompile Include="src\core\LapCounter.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
-    <ClCompile Include="src\render\release\ReleaseRenderLogic.cpp" />
-    <ClCompile Include="src\render\release\ShipRenderer.cpp" />
-    <ClCompile Include="src\render\release\TrackRenderer.cpp" />
+    <ClCompile Include="src\render\ui\GameScreenRenderer.cpp" />
+    <ClCompile Include="src\render\common\ShipRenderer.cpp" />
+    <ClCompile Include="src\render\common\TrackRenderer.cpp" />
     <ClCompile Include="src\calc\Sphere.cpp" />
-    <ClCompile Include="src\render\release\BackgroundRenderer.cpp" />
+    <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
     <ClCompile Include="src\gl\ImageFile.cpp" />
     <ClCompile Include="src\gl\Texture.cpp" />
     <ClCompile Include="src\lib\Environment.cpp" />
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
-    <ClCompile Include="src\render\RenderLogic.cpp" />
-    <ClCompile Include="src\render\BackgroundSphere.cpp" />
+    <ClCompile Include="src\render\ui\ScreenRenderer.cpp" />
+    <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
     <ClCompile Include="src\anx\RandomSpherePoints.cpp" />
-    <ClCompile Include="src\render\release\StarsRenderer.cpp" />
+    <ClCompile Include="src\render\common\StarsRenderer.cpp" />
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\lib\Path.cpp" />
     <ClCompile Include="src\lib\Point2.cpp" />
@@ -149,6 +157,12 @@
     <ClCompile Include="src\gl\Face.cpp" />
     <ClCompile Include="src\input\Keyboard.cpp" />
     <ClCompile Include="src\input\Joystick.cpp" />
+    <ClCompile Include="src\ui\GameScreen.cpp" />
+    <ClCompile Include="src\ui\PauseMenuScreen.cpp" />
+    <ClCompile Include="src\ui\Screen.cpp" />
+    <ClCompile Include="src\ui\ScreenManager.cpp" />
+    <ClCompile Include="src\ui\StartMenuScreen.cpp" />
+    <ClCompile Include="src\ui\TrackSelectorScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
