--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="src\input\Joystick.h" />
     <ClInclude Include="src\input\Keyboard.h" />
     <ClInclude Include="src\lib\Assert.h" />
+    <ClInclude Include="src\lib\CycledArrayIterator.h" />
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\Path.h" />
